--- a/HackVote.cabal
+++ b/HackVote.cabal
@@ -21,6 +21,7 @@ library
                      Settings.Development
                      Handler.Home
                      Handler.HackDay
+                     Handler.HackDayDetails
 
     if flag(dev) || flag(library-only)
         cpp-options:   -DDEVELOPMENT
