Add keter options

--- a/config/keter.yaml
+++ b/config/keter.yaml
@@ -1,7 +1,9 @@
 exec: ../dist/build/HackVote/HackVote
 args:
     - production
-host: <<HOST-NOT-SET>>
+host: "yesodonrails.com"
+root: ../static # don't think I need this really
+postgres: true
 
 # Use the following to automatically copy your bundle upon creation via `yesod
 # keter`. Uses `scp` internally, so you can set it to a remote destination
