--- a/HackVote.cabal
+++ b/HackVote.cabal
@@ -24,7 +24,7 @@ library
                      Handler.HackDayDetails
                      Handler.Project
                      Handler.ProjectDetails
-                     App.Voting
+                     Handler.Voting
 
     if flag(dev) || flag(library-only)
         cpp-options:   -DDEVELOPMENT
