--- a/HackVote.cabal
+++ b/HackVote.cabal
@@ -97,7 +97,7 @@ test-suite test
 
     build-depends: base
                  , HackVote
-                 , yesod-test >= 1.2 && < 1.3
+                 , yesod-test >= 1.2.2 && < 1.3
                  , yesod-core
                  , yesod
                  , persistent
@@ -106,3 +106,4 @@ test-suite test
                  , monad-logger
                  , transformers
                  , hspec
+                 , time
