--- a/.travis.yml
+++ b/.travis.yml
@@ -2,7 +2,8 @@ language: haskell
 
 install:
     - cabal update
-    - cabal install --enable-tests . yesod-platform yesod-bin --max-backjumps=-1 --reorder-goals
+    - cabal install --enable-tests --max-backjumps=-1 --reorder-goals
+
 script:
     - echo Done
     - yesod test
