--- a/.travis.yml
+++ b/.travis.yml
@@ -2,6 +2,7 @@ language: haskell
 
 install:
     - cabal update
+    - cabal install alex
     - cabal install --enable-tests --max-backjumps=-1 --reorder-goals
 
 script:
