--- a/.travis.yml
+++ b/.travis.yml
@@ -1,12 +1,12 @@
 language: haskell
 
+before_install:
+  - psql -c 'CREATE DATABASE hackvote_test;' -U postgres
+
 install:
     - cabal update
     - cabal install alex
     - cabal install --enable-tests --max-backjumps=-1 --reorder-goals
-
-before_script:
-  - psql -c 'CREATE DATABASE hackvote_test;' -U postgres
 
 script:
     - echo Done
