--- a/.travis.yml
+++ b/.travis.yml
@@ -4,9 +4,13 @@ before_install:
   - psql -c 'CREATE DATABASE hackvote_test;' -U postgres
 
 install:
+    - cabal --version
+    - cabal install cabal cabal-install
+    - cabal --version
     - cabal update
     - cabal install alex
     - cabal install --enable-tests --max-backjumps=-1 --reorder-goals
 
 script:
     - echo Done
+    - cabal test
