--- a/HackVote.cabal
+++ b/HackVote.cabal
@@ -45,6 +45,7 @@ library
                 EmptyDataDecls
                 NoMonomorphismRestriction
                 DeriveDataTypeable
+                MultiWayIf
 
     build-depends: base                          >= 4          && < 5
                  , yesod                         >= 1.2        && < 1.3
