Try upgrading Travis to GHC 7.8 to see if it comes with later cabal

--- a/.travis.yml
+++ b/.travis.yml
@@ -1,4 +1,5 @@
 language: haskell
+ghc: 7.8.2
 
 # So in the version of Cabal that Travis CI runs, tests are automatically run when you install with testing enabled (see https://github.com/haskell/cabal/issues/1647)
 # Additionally, `cabal test` would fail in the script section, reporting that the version of GHC and cabal had both changed.
@@ -8,8 +9,6 @@ before_install:
   - psql -c 'CREATE DATABASE hackvote_test;' -U postgres
 
 install:
-    - cabal --version
-    - cabal install cabal-install
     - cabal --version
     - cabal update
     - cabal install alex
