--- a/HackVote.cabal
+++ b/HackVote.cabal
@@ -12,13 +12,16 @@ Flag library-only
     Default:       False
 
 library
+    hs-source-dirs: ., app
     exposed-modules: Application
                      Foundation
                      Import
+                     Import.NoFoundation
                      Model
                      Settings
                      Settings.StaticFiles
                      Settings.Development
+                     Handler.Common
                      Handler.Home
                      Handler.HackDay
                      Handler.HackDayDetails
@@ -28,9 +31,9 @@ library
 
     if flag(dev) || flag(library-only)
         cpp-options:   -DDEVELOPMENT
-        ghc-options:   -Wall -O0
+        ghc-options:   -Wall -fwarn-tabs -O0
     else
-        ghc-options:   -Wall -O2
+        ghc-options:   -Wall -fwarn-tabs -O2
 
     extensions: TemplateHaskell
                 QuasiQuotes
@@ -45,18 +48,25 @@ library
                 EmptyDataDecls
                 NoMonomorphismRestriction
                 DeriveDataTypeable
+                ViewPatterns
+                TupleSections
+                RecordWildCards
+
 
     build-depends: base                          >= 4          && < 5
-                 , yesod                         >= 1.2.5      && < 1.3
-                 , yesod-core                    >= 1.2.12     && < 1.3
-                 , yesod-auth                    >= 1.3        && < 1.4
-                 , yesod-static                  >= 1.2        && < 1.3
-                 , yesod-form                    >= 1.3        && < 1.4
+                 , yesod                         >= 1.4.1      && < 1.5
+                 , yesod-core                    >= 1.4.6      && < 1.5
+                 , yesod-auth                    >= 1.4.0      && < 1.5
+                 , yesod-static                  >= 1.4.0.3    && < 1.5
+                 , yesod-form                    >= 1.4.0      && < 1.5
+                 , classy-prelude                >= 0.10.2
+                 , classy-prelude-conduit        >= 0.10.2
+                 , classy-prelude-yesod          >= 0.10.2
                  , bytestring                    >= 0.9        && < 0.11
                  , text                          >= 0.11       && < 2.0
-                 , persistent                    >= 1.3        && < 1.4
-                 , persistent-postgresql         >= 1.3        && < 1.4
-                 , persistent-template           >= 1.3        && < 1.4
+                 , persistent                    >= 2.0        && < 2.2
+                 , persistent-postgresql         >= 2.1.1      && < 2.2
+                 , persistent-template           >= 2.0        && < 2.2
                  , template-haskell
                  , shakespeare                   >= 2.0        && < 2.1
                  , hjsmin                        >= 0.1        && < 0.2
@@ -72,6 +82,11 @@ library
                  , monad-logger                  >= 0.3        && < 0.4
                  , fast-logger                   >= 2.2        && < 2.3
                  , wai-logger                    >= 2.2        && < 2.3
+                 , file-embed
+                 , safe
+                 , unordered-containers
+                 , containers
+                 , vector
                  , time
 
 executable         HackVote
@@ -80,21 +95,35 @@ executable         HackVote
 
     main-is:           main.hs
     hs-source-dirs:    app
-    build-depends:     base
-                     , HackVote
-                     , yesod
+    build-depends:     base, HackVote
 
-    ghc-options:       -threaded -O2
+    ghc-options:       -threaded -O2 -rtsopts -with-rtsopts=-N
 
 test-suite test
     type:              exitcode-stdio-1.0
-    main-is:           main.hs
-    hs-source-dirs:    tests
+    main-is:           Spec.hs
+    hs-source-dirs:    test
     ghc-options:       -Wall
+
+    extensions: TemplateHaskell
+                QuasiQuotes
+                OverloadedStrings
+                NoImplicitPrelude
+                CPP
+                MultiParamTypeClasses
+                TypeFamilies
+                GADTs
+                GeneralizedNewtypeDeriving
+                FlexibleContexts
+                EmptyDataDecls
+                NoMonomorphismRestriction
+                DeriveDataTypeable
+                ViewPatterns
+                TupleSections
 
     build-depends: base
                  , HackVote
-                 , yesod-test >= 1.2.2 && < 1.3
+                 , yesod-test >= 1.4.2 && < 1.5
                  , yesod-core
                  , yesod
                  , persistent
@@ -102,5 +131,7 @@ test-suite test
                  , resourcet
                  , monad-logger
                  , transformers
-                 , hspec
+                 , hspec >= 2.0.0
+                 , classy-prelude
+                 , classy-prelude-yesod
                  , time
