--- a/.travis.yml
+++ b/.travis.yml
@@ -12,6 +12,7 @@ before_install:
 install:
     - cabal update
     - cabal install alex
+    - cabal install happy
     - cabal install --enable-tests --max-backjumps=-1 --reorder-goals
 
 script:
