--- a/HackVote.cabal
+++ b/HackVote.cabal
@@ -135,3 +135,4 @@ test-suite test
                  , classy-prelude
                  , classy-prelude-yesod
                  , time
+                 , safe
